--- a/GeriatricHelper/Base.lproj/Main.storyboard
+++ b/GeriatricHelper/Base.lproj/Main.storyboard
@@ -45,7 +45,7 @@
                     <connections>
                         <outlet property="progressView" destination="1Y6-Xo-uQV" id="eB8-bj-sDk"/>
                         <segue destination="ldk-HW-20u" kind="show" identifier="leaveInitialSetup" id="5sa-nP-6NU"/>
-                        <segue destination="tCG-0D-c11" kind="show" identifier="NavigatePersonalArea" id="aAJ-mt-opf"/>
+                        <segue destination="QnG-gH-AWg" kind="show" identifier="NavigatePersonalArea" id="aAJ-mt-opf"/>
                         <segue destination="Lmd-4V-Rmi" kind="presentation" identifier="showAppIntro" id="eSa-5X-gco"/>
                     </connections>
                 </viewController>
@@ -56,7 +56,7 @@
         <!--Tab Bar Controller-->
         <scene sceneID="Mur-gJ-XWJ">
             <objects>
-                <tabBarController id="ldk-HW-20u" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="UITabBarController-ldk-HW-20u" id="ldk-HW-20u" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" id="RqX-P0-QT2">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -145,7 +145,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="2hT-kd-Luh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-3178.4000000000001" y="502.39880059970017"/>
+            <point key="canvasLocation" x="-3380" y="479"/>
         </scene>
         <!--Conta-->
         <scene sceneID="ufC-wZ-h7g">
@@ -256,32 +256,12 @@
                     <connections>
                         <outlet property="textFieldLoginEmail" destination="FXf-pW-pxd" id="BPY-iG-OjN"/>
                         <outlet property="textFieldLoginPassword" destination="hxW-pl-K5k" id="MPd-yK-pII"/>
-                        <segue destination="tCG-0D-c11" kind="show" identifier="mySegueIdentifier" id="GnM-Yr-cEm"/>
+                        <segue destination="QnG-gH-AWg" kind="show" identifier="mySegueIdentifier" id="GnM-Yr-cEm"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2402" y="502"/>
-        </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="n2T-TW-hgm">
-            <objects>
-                <tabBarController id="tCG-0D-c11" sceneMemberID="viewController">
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="ggr-hJ-SLQ">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    </tabBar>
-                    <connections>
-                        <segue destination="E1k-rp-TA1" kind="relationship" relationship="viewControllers" id="mKu-Xc-IyS"/>
-                        <segue destination="soU-fY-MVt" kind="relationship" relationship="viewControllers" id="cAq-kV-BAt"/>
-                        <segue destination="5hC-xO-K6h" kind="relationship" relationship="viewControllers" id="Z7g-89-BxC"/>
-                        <segue destination="c66-RI-Ui4" kind="relationship" relationship="viewControllers" id="umG-pW-Xpe"/>
-                    </connections>
-                </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="h3P-LU-R9N" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1547" y="502"/>
+            <point key="canvasLocation" x="-2402" y="478"/>
         </scene>
         <!--Favorite Patients-->
         <scene sceneID="Nv4-lh-Nqx">
@@ -349,7 +329,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wuk-3P-r3F" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6152.8000000000002" y="-445.72713643178412"/>
+            <point key="canvasLocation" x="5238" y="-383"/>
         </scene>
         <!--Sessions-->
         <scene sceneID="iU0-7I-6lT">
@@ -397,7 +377,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="79m-eF-4NR" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2447.1999999999998" y="1100.5997001499252"/>
+            <point key="canvasLocation" x="854" y="1154"/>
         </scene>
         <!--Patients Sessions-->
         <scene sceneID="qcT-LY-tsK">
@@ -446,7 +426,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="wv7-09-ggE" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="6537" y="313"/>
+            <point key="canvasLocation" x="3260" y="310"/>
         </scene>
         <!--Session Scales-->
         <scene sceneID="iMC-P0-qLy">
@@ -513,38 +493,10 @@
             </objects>
             <point key="canvasLocation" x="3260" y="1100.5997001499252"/>
         </scene>
-        <!--Account View Controller-->
-        <scene sceneID="fKs-ew-SuM">
-            <objects>
-                <viewController id="t09-sP-hbs" customClass="AccountViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="c2X-aU-lJ1"/>
-                        <viewControllerLayoutGuide type="bottom" id="Kdu-tD-aor"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="19D-Vr-rJf">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
-                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" id="ezp-IB-qIW">
-                        <barButtonItem key="rightBarButtonItem" title="Logout" id="EFi-KG-bZC">
-                            <connections>
-                                <action selector="signOut:" destination="t09-sP-hbs" id="1rU-S4-gmY"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <connections>
-                        <segue destination="ldk-HW-20u" kind="presentation" identifier="LogOutSegue" id="Snr-ky-S8C"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="2Nz-rY-w7t" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-1486" y="1566"/>
-        </scene>
         <!--Sessions-->
         <scene sceneID="DOc-n4-ON7">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="soU-fY-MVt" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="UINavigationController-soU-fY-MVt" automaticallyAdjustsScrollViewInsets="NO" id="soU-fY-MVt" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Sessions" id="MQ6-yT-PaT"/>
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="7uL-1n-3Bl">
@@ -558,7 +510,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WqV-Ub-1O9" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1200.8" y="2013.6431784107947"/>
+            <point key="canvasLocation" x="-822" y="1171"/>
         </scene>
         <!--Scales Questions-->
         <scene sceneID="4Bh-F8-fMN">
@@ -701,39 +653,10 @@
             </objects>
             <point key="canvasLocation" x="3183" y="1925"/>
         </scene>
-        <!--Item-->
-        <scene sceneID="maQ-JS-dHb">
-            <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="5hC-xO-K6h" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="nq2-gW-UCH"/>
-                    <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="mMh-OW-JBS">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                    <nil name="viewControllers"/>
-                    <connections>
-                        <segue destination="t09-sP-hbs" kind="relationship" relationship="rootViewController" id="MbD-HJ-etp"/>
-                    </connections>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="svO-a4-6hP" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-2402" y="1566"/>
-        </scene>
-        <!--CGAGuide-->
-        <scene sceneID="hN4-FO-PoY">
-            <objects>
-                <viewControllerPlaceholder storyboardName="CGAGuide" id="c66-RI-Ui4" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="SRW-MV-LTF"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="cmD-jV-ZGS" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="2320.8000000000002" y="2659.5202398800602"/>
-        </scene>
-        <!--Review Public Session Table View Controller-->
+        <!--Review Session Table View Controller-->
         <scene sceneID="Lbv-TC-kKT">
             <objects>
-                <tableViewController storyboardIdentifier="UITableViewController-Z0H-5n-OT6" id="Z0H-5n-OT6" customClass="ReviewPublicSessionTableViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController storyboardIdentifier="UITableViewController-Z0H-5n-OT6" id="Z0H-5n-OT6" customClass="ReviewSessionTableViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="q1W-WH-rJj">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -767,7 +690,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Pzn-gQ-xD8" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="GiU-kn-DaD" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-180" y="737"/>
+            <point key="canvasLocation" x="-167" y="351"/>
         </scene>
         <!--CGAPublic-->
         <scene sceneID="rCV-Bm-8uZ">
@@ -778,16 +701,6 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="jrN-9g-P10" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-364" y="-284.25787106446779"/>
-        </scene>
-        <!--Patients-->
-        <scene sceneID="gTF-oa-QFT">
-            <objects>
-                <viewControllerPlaceholder storyboardName="Patients" id="E1k-rp-TA1" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="O7z-MU-SQk"/>
-                </viewControllerPlaceholder>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="d89-cr-MZ9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-762" y="312"/>
         </scene>
         <!--Help-->
         <scene sceneID="PGc-tI-34i">
@@ -893,6 +806,14 @@ SESSÃO</string>
             </objects>
             <point key="canvasLocation" x="-1047" y="-284"/>
         </scene>
+        <!--PrivateArea-->
+        <scene sceneID="8dB-4i-ByF">
+            <objects>
+                <viewControllerPlaceholder storyboardName="PrivateArea" id="QnG-gH-AWg" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Bsj-9M-3ZF" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2424" y="1290"/>
+        </scene>
     </scenes>
     <resources>
         <image name="Account" width="25" height="25"/>
@@ -900,8 +821,8 @@ SESSÃO</string>
         <image name="pill" width="13" height="13"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="XH4-lZ-S85"/>
-        <segue reference="GnM-Yr-cEm"/>
+        <segue reference="zNJ-As-ddY"/>
         <segue reference="Tjg-tp-tyX"/>
+        <segue reference="GnM-Yr-cEm"/>
     </inferredMetricsTieBreakers>
 </document>
