--- a/GeriatricHelper/CGAPublic.storyboard
+++ b/GeriatricHelper/CGAPublic.storyboard
@@ -13,7 +13,7 @@
         <!--CGA Guide Scales-->
         <scene sceneID="AeB-SH-nul">
             <objects>
-                <tableViewController title="CGA Guide Scales" id="Oze-dn-a1N" customClass="CGAPublicScalesForArea" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="CGA Guide Scales" id="Oze-dn-a1N" customClass="CGAScalesForArea" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="84" sectionHeaderHeight="28" sectionFooterHeight="28" id="tpT-3f-fdP">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -54,7 +54,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PAw-An-1JS" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="hDo-LP-lrV" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-658" y="-349"/>
+            <point key="canvasLocation" x="-687" y="-357"/>
         </scene>
         <!--Public Multiple Categories-->
         <scene sceneID="Cef-Fl-CSR">
@@ -122,7 +122,7 @@
         <!--SessionSingleQuestionChoices-->
         <scene sceneID="YOD-HF-9SN">
             <objects>
-                <tableViewController title="SessionSingleQuestionChoices" id="9Yt-du-9hg" customClass="CGAPublicScaleSingleChoice" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <tableViewController title="SessionSingleQuestionChoices" id="9Yt-du-9hg" customClass="CGAScaleSingleChoice" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="60" sectionHeaderHeight="22" sectionFooterHeight="22" id="ltc-Zq-d5Q">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -269,7 +269,7 @@
         <!--Review Public Session-->
         <scene sceneID="217-eP-XOV">
             <objects>
-                <viewController title="Review Public Session" id="d1D-lX-Ir5" customClass="ReviewPublicSessionTableViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Review Public Session" id="d1D-lX-Ir5" customClass="ReviewSessionTableViewController" customModule="GeriatricHelper" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="gPV-nk-ZNK"/>
                         <viewControllerLayoutGuide type="bottom" id="OG8-gI-GO3"/>
@@ -362,7 +362,7 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Ptu-mX-EKb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1458" y="485"/>
+            <point key="canvasLocation" x="-1458" y="410"/>
         </scene>
         <!--Scales Questions-->
         <scene sceneID="B90-D7-YiH">
@@ -394,7 +394,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="snT-GJ-Urb" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="321" y="-279"/>
+            <point key="canvasLocation" x="50" y="-555"/>
         </scene>
         <!--CGA Guide Scales-->
         <scene sceneID="Lb9-l5-UrZ">
@@ -443,7 +443,7 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="rWA-69-DRs" userLabel="First Responder" sceneMemberID="firstResponder"/>
                 <exit id="peO-s4-lRR" userLabel="Exit" sceneMemberID="exit"/>
             </objects>
-            <point key="canvasLocation" x="-659" y="-1166"/>
+            <point key="canvasLocation" x="-1045" y="-1161"/>
         </scene>
         <!--Preview View Controller-->
         <scene sceneID="gic-c3-tgr">
@@ -484,9 +484,9 @@
         <image name="pill" width="13" height="13"/>
     </resources>
     <inferredMetricsTieBreakers>
-        <segue reference="vH1-f2-YmV"/>
-        <segue reference="6MQ-Id-j66"/>
         <segue reference="5sP-Qm-QCY"/>
+        <segue reference="4ue-RV-T5t"/>
         <segue reference="iGh-v3-wOO"/>
+        <segue reference="6MQ-Id-j66"/>
     </inferredMetricsTieBreakers>
 </document>
