--- a/GeriatricHelper/PopOvers.storyboard
+++ b/GeriatricHelper/PopOvers.storyboard
@@ -100,18 +100,19 @@
                         <viewControllerLayoutGuide type="top" id="pyU-Wd-3El"/>
                         <viewControllerLayoutGuide type="bottom" id="9pT-mD-fxG"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="0jc-bE-pTH">
+                    <view key="view" alpha="0.0" contentMode="scaleToFill" id="0jc-bE-pTH">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vLN-7r-pXq">
                                 <rect key="frame" x="16" y="28" width="343" height="21"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="0.0" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="vLN-7r-pXq" firstAttribute="centerX" secondItem="0jc-bE-pTH" secondAttribute="centerX" id="7TU-bN-3Nu"/>
                             <constraint firstAttribute="leadingMargin" secondItem="vLN-7r-pXq" secondAttribute="leading" id="d68-J0-uCv"/>
