--- a/GeriatricHelper/ScaleTableViewCell.xib
+++ b/GeriatricHelper/ScaleTableViewCell.xib
@@ -12,11 +12,11 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="100" id="KGk-i7-Jjw" customClass="ScaleTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="108"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="142" id="KGk-i7-Jjw" customClass="ScaleTableViewCell" customModule="GeriatricHelper" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="150"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="107.5"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="149.5"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Scale name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="EA6-d1-j3R">
@@ -43,6 +43,15 @@
                             <action selector="infoButtonClicked:" destination="KGk-i7-Jjw" eventType="touchUpInside" id="sSA-Ag-opv"/>
                         </connections>
                     </button>
+                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Notas" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="7gD-u9-Ft6">
+                        <rect key="frame" x="16" y="103" width="59.5" height="30"/>
+                        <nil key="textColor"/>
+                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                        <textInputTraits key="textInputTraits"/>
+                        <connections>
+                            <action selector="notesUpdated:" destination="KGk-i7-Jjw" eventType="editingDidEnd" id="0aw-1k-dp7"/>
+                        </connections>
+                    </textField>
                 </subviews>
                 <constraints>
                     <constraint firstItem="Bdj-sq-K4k" firstAttribute="top" secondItem="EA6-d1-j3R" secondAttribute="bottom" constant="8" id="4Hl-cg-fvM"/>
@@ -51,17 +60,20 @@
                     <constraint firstItem="ZuR-3c-eps" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="E0c-f2-sXL"/>
                     <constraint firstItem="EA6-d1-j3R" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="G1c-RC-omB"/>
                     <constraint firstItem="EA6-d1-j3R" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="Knw-1e-Lhz"/>
+                    <constraint firstItem="7gD-u9-Ft6" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="OVX-9c-5AR"/>
                     <constraint firstItem="Bdj-sq-K4k" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leadingMargin" constant="8" id="RaY-Ts-WWS"/>
                     <constraint firstItem="1C5-Av-VGx" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="topMargin" constant="8" id="gZr-5M-Llx"/>
+                    <constraint firstItem="7gD-u9-Ft6" firstAttribute="top" secondItem="ZuR-3c-eps" secondAttribute="bottom" constant="8" id="gqC-rh-SNG"/>
                 </constraints>
             </tableViewCellContentView>
             <connections>
                 <outlet property="infoButton" destination="1C5-Av-VGx" id="SsI-CM-3I7"/>
                 <outlet property="name" destination="EA6-d1-j3R" id="MOk-pf-DWN"/>
+                <outlet property="notes" destination="7gD-u9-Ft6" id="jhB-Qz-Qtl"/>
                 <outlet property="resultQualitative" destination="Bdj-sq-K4k" id="Ptw-yf-w6Y"/>
                 <outlet property="resultQuantitative" destination="ZuR-3c-eps" id="nfO-so-H5F"/>
             </connections>
-            <point key="canvasLocation" x="-118" y="31"/>
+            <point key="canvasLocation" x="-118" y="52"/>
         </tableViewCell>
     </objects>
 </document>
