- added remoteconfig - new CGA areas disposition

--- a/GeriatricHelper/Base.lproj/Help.storyboard
+++ b/GeriatricHelper/Base.lproj/Help.storyboard
@@ -6,7 +6,6 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
-        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -83,19 +82,25 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4W-Ht-rgQ">
-                                <rect key="frame" x="24" y="72" width="327" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZYI-uw-xnm">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="V4W-Ht-rgQ">
+                                        <rect key="frame" x="20" y="20" width="327" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                            </scrollView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="trailingMargin" secondItem="V4W-Ht-rgQ" secondAttribute="trailing" constant="8" id="7D2-Tk-J4W"/>
-                            <constraint firstItem="V4W-Ht-rgQ" firstAttribute="leading" secondItem="eVO-kg-cD9" secondAttribute="leadingMargin" constant="8" id="7qJ-nC-KtC"/>
-                            <constraint firstItem="V4W-Ht-rgQ" firstAttribute="top" secondItem="tTC-5S-mLH" secondAttribute="bottom" constant="8" id="gZZ-dA-EEJ"/>
-                            <constraint firstItem="V4W-Ht-rgQ" firstAttribute="centerX" secondItem="eVO-kg-cD9" secondAttribute="centerX" id="igq-C1-ezR"/>
+                            <constraint firstAttribute="bottom" secondItem="ZYI-uw-xnm" secondAttribute="bottom" id="91p-am-qoV"/>
+                            <constraint firstAttribute="trailing" secondItem="ZYI-uw-xnm" secondAttribute="trailing" id="XLa-qr-F0S"/>
+                            <constraint firstItem="ZYI-uw-xnm" firstAttribute="leading" secondItem="eVO-kg-cD9" secondAttribute="leading" id="tgi-UP-Oj9"/>
+                            <constraint firstItem="ZYI-uw-xnm" firstAttribute="top" secondItem="eVO-kg-cD9" secondAttribute="top" id="vMA-RP-7XW"/>
                         </constraints>
                     </view>
                     <connections>
@@ -104,7 +109,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Jxf-ym-6QS" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-28" y="-636.4317841079461"/>
+            <point key="canvasLocation" x="-121" y="-636"/>
         </scene>
     </scenes>
     <resources>
